<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.taller3.Resultado_Cono">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cono"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="0.08" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:layout_weight="0.05" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/volumen"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark" />

            <EditText
                android:id="@+id/txtResultadoCono"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Volver"
            android:text="@string/ok"
            android:textColor="@android:color/holo_green_dark" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
