<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.taller3.Resultado_Cilindro">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cilindro"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="0.06" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:layout_weight="0.03" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/volumen"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtResultadoCilindro"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Volver"
            android:text="@string/ok"
            android:textColor="@android:color/holo_green_dark" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
