<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resultado_cuadrado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.taller3.resultadoCuadrado">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuadrado"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="79dp">

            <TextView
                android:text="@string/area"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:layout_weight="173.31" />

            <EditText
                android:id="@+id/TxtResultadoCuadrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/cmdOkCuadrado"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="Volver"
            android:text="@string/ok"
            android:textColor="@android:color/holo_green_dark" />

    </LinearLayout>

</RelativeLayout>
