<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resultado__triangulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.taller3.Resultado_Triangulo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:text="@string/triangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:textStyle="normal|bold"
            android:textSize="30sp"
            android:textColor="@android:color/holo_green_dark"
            android:textAlignment="center"
            android:layout_weight="0.11" />

        <TextView
            android:text="@string/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:text="@string/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtResultadoTriangulo"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Volver"
            android:text="@string/ok"
            android:textColor="@android:color/holo_green_dark" />
    </LinearLayout>
</RelativeLayout>
